# hubbard_ed

./: Cargo.toml  README.md  build.rs
src/: main.rs  matrix.rs  typedef.rs
src/diagexact/: mod.rs
src/diagexact/matrix/: operators.rs
src/matrix/: operators.rs
